# task_manager

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: config.py  database.py  exceptions.py  main.py  models.py  schemas.py
app/migrations/: env.py
app/migrations/versions/: 81897812ea1a_create_tasks_table.py
app/routes/: tasks.py
app/services/: task_service.py
tests/: test_create.py  test_delete.py  test_get.py  test_update.py
